<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/userContainer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".Activity.LoginActivity">

        <TextView
            android:id="@+id/loginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginPage"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="100dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            android:layout_below="@+id/loginPage">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            android:layout_below="@+id/emailLayout">

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/passwordLayout"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textSize="20sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnRegi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_below="@+id/btnLogin"/>
    </RelativeLayout>

</FrameLayout>