<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_dashboard"
        android:id="@+id/dashboard"
        android:title="Dashboard" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_activity"
        android:id="@+id/map"
        android:title="Activity" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_user"
        android:id="@+id/user"
        android:title="User" />
</menu>