...
                android:textColor="@color/black"
                android:layout_marginStart="5dp">
            </TextView>
        </LinearLayout>

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_border"
            android:paddingLeft="10dp"
            android:padding="15dp"
...
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editLayout">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/update"
            android:textSize="20sp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
...
