<resources>
    <string name="app_name">Sportify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_run">RunActivity</string>

    <string name="loginPage">Login Page</string>
    <string name="regiPage">Register Page</string>
    <string name="editProfile">Edit Profile</string>
    <string name="welcome">Welcome back:</string>

    <!-- string for Button -->
    <string name="register">Create New Account</string>
    <string name="loginString">Existing user! Login</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!-- string for navigation menu -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="activity">Activity</string>
    <string name="userActivity">Recent Activities</string>

    <!-- String for hint -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rePassword">Retype Password</string>
    <string name="age">Age</string>

    <!-- String for user page -->
    <string name="emailText">Email:</string>
    <string name="ageText">Age:</string>
    <string name="genderText">Gender:</string>

    <!-- String for activity page -->
    <string name="dateText">Date:</string>
    <string name="timeText">Timing:</string>
    <string name="distanceText">Distance:</string>
</resources>